# Boxity

./: .gitignore  .gitmodules  CMakeLists.txt  TODO.md
examples/: ballstack.bx
src/: lua.hpp  main.cpp  physics.hpp
src/core/: Entity.cpp  Entity.hpp  Object.cpp  Object.hpp  ObjectFactory.cpp  ObjectFactory.hpp  PVObject.cpp  PVObject.hpp  Root.cpp  Root.hpp  Service.cpp  Service.hpp  Singleton.hpp  VObject.cpp  VObject.hpp  World.cpp  World.hpp
src/objects/: Ball.cpp  Ball.hpp  Box.cpp  Box.hpp  Script.cpp  Script.hpp
src/services/: PhysicsService.cpp  PhysicsService.hpp  RenderService.cpp  RenderService.hpp  ScriptService.cpp  ScriptService.hpp  TaskService.cpp  TaskService.hpp
src/types/: Type.cpp  Type.hpp  Vec2.cpp  Vec2.hpp
